--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
+        <div class="container" id="intro">
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
@@ -208,7 +208,7 @@
                     <a href="#work" class="portfolio-link" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
-                                <p>University of Rochester Teaching Assistant: Android app development</p>
+                                <p>University of Rochester Fall 2015 Teaching Assistant: Android app development</p>
                             </div>
                         </div>
                         <img src="img/rocky.png" class="img-responsive" alt="">
@@ -310,7 +310,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
+    <script src="js/jquery.particleground.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/index.js"></script>
 
