Added changes to index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                         <div class="col-lg-8 col-lg-offset-2 text-center">
                             <hr class="star-light">
-                            <span class="skills">Full Stack Developer - Android Developer - Data Science</span>
+                            <span class="skills">Full Stack Developer - Android Developer - Data Mining</span>
                         </div>
                     </div>
                 </div>
