Added content files

--- a/projects/vocal_coach.html
+++ b/projects/vocal_coach.html
@@ -11,7 +11,11 @@
                         <div class="modal-body">
                             <h2>UR Vocal Coach</h2>
                             <hr class="star-primary">
-                            <p>This Android app provides a singer feedback about the musical note he/she's singing. It lets the user set a target note. As the user sings, it provides a real time feedback on the distance between users voice and target note.</p>
+                            <p>This Android app provides a singer feedback about the musical note he/she's singing. It lets the user set a target note. As the user sings, it provides a real time feedback on the distance between users voice and target note. More project details are 
+                                <strong>
+                                    <a href="https://sites.google.com/a/u.rochester.edu/ur-vocalcoach/" target="_blank">    here</a>
+                                </strong>
+                             </p>
                             <div id="vocalCarousel" class="carousel slide project" data-ride="carousel">
                                 <!-- Indicators -->
                                  <ol class="carousel-indicators">
