Added content files

--- a/projects/mining.html
+++ b/projects/mining.html
@@ -11,7 +11,7 @@
                         <div class="modal-body">
                             <h2>Hackathon Mining</h2>
                             <hr class="star-primary">
-                            <p>A data mining project where we looked at various trends of participants and projects in various hackathons. The data was obtained using the APIs of <a href="https://www.devpost.com" target="_blank">Devpost</a>. We worked on classifier in the project. We're looking forward to work on things like recommendation engine based on the projects and participation. The following are some of the trends found.</p>
+                            <p>A data mining project where we looked at various trends of participants and projects in various hackathons. The data was obtained using the APIs of <a href="https://www.devpost.com" target="_blank">Devpost</a>. We analyzed trends like which type of projects were winning hackathon projects. The trends of teams which participated in the hackathons and participants by different states. We worked on a classifier in the project. We're looking forward to work on things like recommendation engine based on the projects and participation. The following are some of the trends found.</p>
                             <div id="miningCarousel" class="carousel slide project" data-ride="carousel">
                                 <!-- Indicators -->
                                  <ol class="carousel-indicators">
