Add new work ex

--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
                         <img src="img/nagarro.png" class="img-responsive" alt="">
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#work" class="portfolio-link" class="portfolio-link">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <p>Technical Consultant: February 2012 - March 2013</p>
+                            </div>
+                        </div>
+                        <img src="img/mmt.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
                 <div class="col-sm-4 portfolio-item" class="portfolio-link">
                     <a href="#work" class="portfolio-link">
                         <div class="caption">
