Changes to project files

--- a/projects/ame.html
+++ b/projects/ame.html
@@ -11,7 +11,7 @@
                         <div class="modal-body">
                             <h2>AutoMelody</h2>
                             <hr class="star-primary">
-                            <p>Generating musical melodies algorithmically usig pure data. The user can select a musical scale and it'll be automatically played. Used MIDI messages for playing using a digital audio workstation</p>
+                            <p>Generating musical melodies algorithmically using pure data. The user can select a musical scale and it'll be automatically played. Used MIDI messages for playing using a digital audio workstation</p>
                             <div id="ameCarousel" class="carousel slide project" data-ride="carousel">
                                 <!-- Indicators -->
                                  <ol class="carousel-indicators">
