Added new project

--- a/index.html
+++ b/index.html
@@ -105,51 +105,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#project_vocal" class="portfolio-link" data-toggle="modal">
+                <div class="col-sm-3 portfolio-item">
+                    <a href="#project_eziMusic" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
-                                <p>UR VocalCoach</p>
+                                <p>EziTools: An android app with musical tools</p>
                             </div>
                         </div>
-                        <img src="img/portfolio/vocal_coach.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/eziTools1.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#project_weather" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                                <p>My Weather: Weather app for Android</p>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/weather.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#project_musico" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                                <p>MusicoHotel: Android app for favorite bands and hotels</p>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/musico.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#project_listing" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                                <p>URListings: A listing website for University of Rochester Students to search for roommates</p>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/listings.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#project_mining" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -160,7 +127,40 @@
                         <img src="img/portfolio/mining.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
+                    <a href="#project_vocal" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                                <p>UR VocalCoach</p>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/vocal_coach.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item">
+                    <a href="#project_weather" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                                <p>My Weather: Weather app for Android</p>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/weather.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item">
+                    <a href="#project_musico" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                                <p>MusicoHotel: Android app for favorite bands and hotels</p>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/musico.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item">
                     <a href="#project_ame" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -169,6 +169,17 @@
                             </div>
                         </div>
                         <img src="img/portfolio/ame.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item">
+                    <a href="#project_listing" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                                <p>URListings: A listing website for University of Rochester Students to search for roommates</p>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/listings.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -311,6 +322,8 @@
     <div class="portfolio-modal modal fade" id="project_mining" tabindex="-1" role="dialog" aria-hidden="true">
     </div>
     <div class="portfolio-modal modal fade" id="project_ame" tabindex="-1" role="dialog" aria-hidden="true">
+    </div>
+    <div class="portfolio-modal modal fade" id="project_eziMusic" tabindex="-1" role="dialog" aria-hidden="true">
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
