Added new project

--- a/projects/mining.html
+++ b/projects/mining.html
@@ -54,7 +54,15 @@
                             </div>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="https://github.com/URListings/Data_mining" target="_blank">Source</a>
+                                    <strong><a href="https://medium.com/@kanishktripathi/our-analysis-of-hackathon-projects-introduction-952de9de4d69" target="_blank">Part 1</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="https://medium.com/@kanishktripathi/our-analysis-of-hackathon-projects-part-2-258f30dff038" target="_blank">Part 2</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="https://medium.com/@kanishktripathi/our-analysis-of-hackathon-projects-part-3-a94637c18b14" target="_blank">Part 3</a>
                                     </strong>
                                 </li>
                             </ul>
